--- a/HTML/PaginaPrincipal.html
+++ b/HTML/PaginaPrincipal.html
@@ -2,7 +2,6 @@
 <html>
     <head>
 
-        <p>PlusFriends</p>
 
         <script>
             var app = angular.module('PlusFriends',[]);
@@ -14,7 +13,7 @@
     </head>
     <body>
         <div class="divInicial" id="divInicial" ng-app="PlusFriends" ng-controller="divCtrlInicial">
-            <p>Olá {{usuario}}</p>
+            <p><h1>Pagina encontra-se em desenvolvimento</h1>></p>
         </div>
     </body>
 </html>
